--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,7 +17,7 @@ html {
 
 
 body {
-  font-family: 'Stardos Stencil', serif;
+  font-family: "montserrat", sans-serif;
   color: white;
   background-color: #000;
 }
@@ -72,6 +72,10 @@ body {
 .hero-title {
   font-family: 'Cinzel Decorative', serif;
   margin-bottom: 2rem;
+}
+
+.hero-text small {
+  font-family: 'Cinzel Decorative', serif;
 }
 
 .title-small {
@@ -138,6 +142,7 @@ body {
 .stat strong {
   font-size: 1.4rem;
   color: gold;
+  font-family: 'Stardos Stencil', serif;
 }
 
 .stat small {
@@ -147,13 +152,15 @@ body {
 
 .hero-subtext {
   font-size: 1.2rem;
+  font-family: 'Stardos Stencil', serif;
+  text-transform: uppercase;
   margin-bottom: 2rem;
   line-height: 1.5;
 }
 
 .bonus-highlight {
   font-size: 1.5rem;
-  font-family: 'Stardos Stencil', serif;
+  font-family: 'Cinzel Decorative', serif;
   color: #ffcc00;
   text-shadow: 1px 1px 5px #000;
 }
@@ -410,8 +417,8 @@ body {
 .main-nav a {
   color: white;
   text-decoration: none;
-  font-weight: bold;
-  font-family: 'Stardos Stencil', serif;
+  font-weight:600;
+  font-family: "montserrat", sans-serif;
 }
 
 .main-nav a:hover {
