--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -171,7 +171,8 @@ body {
   color: white;
   padding: 1rem 2rem;
   font-size: 1rem;
-  font-family: 'Stardos Stencil', serif;
+  font-family: 'Cinzel Decorative', serif;
+  font-weight: 600;
   border-radius: 15px;
   text-decoration: none;
   box-shadow: 0 0 15px rgba(255, 0, 0, 0.6);
@@ -418,7 +419,7 @@ body {
   color: white;
   text-decoration: none;
   font-weight:600;
-  font-family: "montserrat", sans-serif;
+  font-family: 'Cinzel Decorative', serif;
 }
 
 .main-nav a:hover {
@@ -431,7 +432,8 @@ body {
   color: white;
   padding: 0.5rem 1rem;
   font-size: 1rem;
-  font-family: 'Stardos Stencil', serif;
+  font-family: 'Cinzel Decorative', serif;
+  font-weight: 600;
   border-radius: 15px;
   text-decoration: none;
   box-shadow: 0 0 15px rgba(255, 0, 0, 0.6);
@@ -765,7 +767,8 @@ body {
   border: none;
   border-radius: 15px;
   color: #fff;
-  font-family: 'Stardos Stencil', serif;
+  font-family: 'Cinzel Decorative', serif;
+  font-weight: 600;
   font-size: 1rem;
   cursor: pointer;
   box-shadow: 0 0 15px rgba(255,0,0,0.6);
